[java-decompiler]: Allow customizing compiler options in tests
#IDEA-386844

GitOrigin-RevId: a3313d9b8a782034a2d40e1b945cab70852f2329